# jayseregon-ai-toolbox

./: README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: main.py
src/configs/: env_config.py  log_config.py
src/models/: embedding.py  embeddingModel.py
src/routes/: embedding.py  embeddingRouter.py
src/security/rateLimiter/: __init__.py  backends.py  depends.py
src/services/: embedding.py  embeddingService.py
src/test/: conftest.py  test_main.py
src/test/configs/: test_env_config.py  test_log_config.py
src/test/models/: test_embeddingModels.py
src/test/routes/: test_embedding.py
src/test/security/: test_rate_limiter.py
src/test/services/: test_embeddingService.py
